src/objects/LoginCredential__c.object
<CustomObject>
    <fields>
        <fullName>AwsAccessId__c</fullName>
        <label>Access Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AwsSecurityKey__c</fullName>
        <label>Security Key (Token)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstSyncDate__c</fullName>
        <label>First Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IsPrivate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>NOTE: Before you change an entry to private, you MUST be the owner of this record or above the role hierarchy of the the record owner, otherwise you can&apos;t see it any more. Contact administrator if you lost it.</inlineHelpText>
        <label>Is Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastSyncDate__c</fullName>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LoginURL__c</fullName>
        <label>Login URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>MProject__c</referenceTo>
        <relationshipLabel>Login Credentials</relationshipLabel>
        <relationshipName>LoginCredentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesforceLoginURL__c</fullName>
        <formula>HYPERLINK(IF(AND($RecordType.Name = &quot;Salesforce&quot;, NOT(ISPICKVAL(Type__c, &quot;Portal&quot;))), &quot;https://&quot; + IF(ISPICKVAL(Type__c, &quot;Sandbox&quot;), &quot;test&quot;, &quot;login&quot;) + &quot;.salesforce.com/?un=&quot; + Username__c + &quot;&amp;pw=&quot; + Password__c, LoginURL__c), &quot;Log In&quot;, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Login URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScmName__c</fullName>
        <label>SCM Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SyncError__c</fullName>
        <label>Sync Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Edition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Login Credential</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Login Credentials</pluralLabel>
    <recordTypes>
        <fullName>AmazonWebServices</fullName>
        <active>true</active>
        <label>Amazon Web Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Salesforce</fullName>
        <active>true</active>
        <label>Salesforce</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>